--- a/minimanda/Makefile
+++ b/minimanda/Makefile
@@ -1,7 +1,11 @@
 CFLAGS=-std=c11 -g -fno-common
+SRCS=$(wildcard *.c)
+OBJS=$(SRCS:.c=.o)
 
-manda: main.o
-	$(CC) -o manda main.o $(LDFLAGS)
+manda: $(OBJS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+$(OBJS): manda.h
 
 test: manda
 	./test.sh
