test0: simple test glue

--- a/minimanda/Makefile
+++ b/minimanda/Makefile
@@ -1,17 +1,26 @@
 CFLAGS=-std=c11 -g -fno-common
+
 SRCS=$(wildcard *.c)
 OBJS=$(SRCS:.c=.o)
+
+TEST_SRCS=$(wildcard test/*.manda)
+TESTS=$(TEST_SRCS:.manda=.exe)
 
 manda: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 $(OBJS): manda.h
 
-test: manda
-	./test.sh
-	./test-driver.sh
+test/%.exe: manda test/%.manda
+	cat test/$*.manda | ./manda -o test/$*.s -
+	$(CC) -o $@ test/$*.s -xc test/common
+
+test: $(TESTS)
+	for i in $^; do echo $$i; ./$$i || exit 1; echo; done
+	test/driver.sh
 
 clean:
-	rm -f manda *.o *~ tmp*
+	rm -rf manda tmp* $(TESTS) test/*.s test/*.exe
+	find * -type f '(' -name '*~' -o -name '*.o' ')' -exec rm {} ';'
 
 .PHONY: test clean
